--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
+
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
@@ -27,8 +28,9 @@ android {
     }
     buildTypes {
         debug {
-            minifyEnabled true
-            shrinkResources true
+            ext.enableCrashlytics = false
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
@@ -55,6 +57,9 @@ dependencies {
     // alternatively, just LiveData
     implementation "android.arch.lifecycle:livedata:1.1.1"
 
+    implementation "android.arch.paging:runtime:1.0.1"
+    implementation "android.arch.paging:rxjava2:1.0.1"
+
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
     // Room (use 1.1.0-alpha3 for latest alpha)
@@ -66,11 +71,11 @@ dependencies {
 
     // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:1.0.0"
-    compile 'com.miguelcatalan:materialsearchview:1.4.0'
-    compile "com.android.support:support-core-utils:27.1.1"
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+    implementation "com.android.support:support-core-utils:27.1.1"
 
     implementation "android.arch.persistence.room:rxjava2:1.0.0"
-    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
         transitive = true;
     }
 
